Version 1.9.4, 2014-11-28 10:37:10 +0100

  General
  * New: implement QsLog to create log files
  * Improved: translation updates
  
  SailfishOS
  * New: application language chooser in settings
  * Imporved: updated BTComponents (About page, Changelog, Contributors, etc)
  
  Harmattan
  * New: maintenance option to delete all ocNews accounts

Version 1.9.3, 2014-11-12 18:04:41 +0100

  General
  * Improved: translation updates
  
  Sailfish OS
  * New: partly dutch translation by Heimen Stoffels
  * Improved: SailfishOS Update 9 compatibility

Version 1.9.2, 2014-07-02 18:32:00 +0200

  General
  * Fixed: also react on text changes when rescaling rich text, fixing issue #52
  * Fixed: fixing bugs in configuration system, should also fix issue #54

Version 1.9.1, 2014-07-02 01:00:00 +0200

  General
  * Changed: show All Articles entry even when there are no unread items and hide feeds and folders is set to true
  * Changed: use threaded model population for normal itemsmodel, too
  * Fixed: fix return of NULL value in database query for total unread count (should fix issue #49)
  
  Sailfish OS
  * Fixed: when scaling rich text, first calculate the scaling, then set the text, fixes issue #47
  * Fixed: add forgotten connections between items signal markedAllItemsReadSuccess to models, to fix not updated models
  * Fixed: use nemo-keepalive for reliable update interval, fixes issue #5

Version 1.9.0, 2014-06-29 23:33:19 +0200

  General
  * New: optional show article excerpts in list views (issue #41)
  * New: optional notify about new items, also notify about errors on SailfishOS, notifications are now part of the background daemon (issue #38)
  * Changed: changelog layout
  * Changed: simplified wording for some context menus in list views (issue #43)
  * Improved: code cleanups (issue #40)
  * Improved: data models (issue #44)
  * Fixed: local unread count was not updated after moving a feed (issue #46)
  
  Harmattan
  * New: startup info
  
  Sailfish OS