@@ -1,3 +1,6 @@
+  General
+  * New: option to open links directly (as proposed in issue #51)
+
 Version 1.9.4, 2014-11-28 10:37:10 +0100
 
   General
